Use `Stream.toList`
GitOrigin-RevId: 5b6a6a6d9dbe08cdc706bd81dcd1f5d3d9549ed1